test/langtools/tools/javac/lambda_leftovers/UnderscoreInCatchClauseTest.out
UnderscoreInCatchClauseTest.java:13:19: compiler.err.underscore.not.allowed
1 error
